--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
+
 }
 
 .gridRow {
@@ -8,7 +9,5 @@
 }
 
 .gridBox {
-    border: 2px solid black;
-    width: 20px;
-    height: 20px;
+    border: .25px solid black;
 }
